--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="container">
         <div id="profile">
-            <img src="/assets/Profile-Avatar-PNG.png" alt="Foto do usuário"/>
+            <img src="./assets/Profile-Avatar-PNG.png" alt="Foto do usuário"/>
             <p>@kelvynq</p>
         </div>
 
@@ -56,7 +56,7 @@
             Feito ❤ com pela <a href="https://rocketseat.com.br/" target="_blank">Rocketseat</a>
         </footer>
     </div>
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     
 </body>
