--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
         <div>
             <ul>
                 <li>
-                    <a href="https://www.linkedin.com/in/jkelvynsilva/">Acessar o meu Perfil</a>
+                    <a href="https://www.linkedin.com/in/jkelvynsilva/" target="_blank">Acessar o meu Perfil</a>
                 </li>
                 <li>
                     <a href="#">Baixar meu e-book</a>
                 </li>
                 <li>
-                    <a href="https://github.com/Kelvynq">Ver meu portfólio</a>
+                    <a href="https://github.com/Kelvynq" target="_blank">Ver meu portfólio</a>
                 </li>
                 <li>
-                    <a href="https://www.google.com/intl/pt-BR/gmail/about/">Contato</a>
+                    <a href="https://www.google.com/intl/pt-BR/gmail/about/" target="_blank">Contato</a>
                 </li>
             </ul>
             <div id="social-links">
@@ -53,7 +53,7 @@
             </div>
         </div>
         <footer>
-            Feito ❤ com pela <a href="https://rocketseat.com.br/" target="_blank">Rocketseat</a>
+            Feito com ❤ pela <a href="https://rocketseat.com.br/" target="_blank">Rocketseat</a>
         </footer>
     </div>
     <script src="./script.js"></script>
